--- a/css/register.css
+++ b/css/register.css
@@ -58,15 +58,12 @@ img.showPass{
 .inputGroup input {
   width: 100%;
   border: 1px solid #010101;
+  background: transparent;
   box-sizing: border-box;
   border-radius: 10px;
   height: 70px;
   padding-left: 55px;
 }
-
-/* .passwordInput input{
-  font-size: 35px;
-} */
 
 .inputGroup input::placeholder{
   font-size: 16px;
